--- a/src/html/common/navigator.html
+++ b/src/html/common/navigator.html
@@ -6,17 +6,19 @@
                     <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">会邻</a>
-                <div class="navbar-slogan">连接更可靠的人脉</div>
             </div>
             <div id="main-navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="./index.html">首页</a></li>
-                    <li><a href="./team.html">会邻团队</a></li>
-                    <li><a href="./news.html">新闻资讯</a></li>
-                    <li><a href="./contact.html">联系我们</a></li>
-                    <li><a href="./hire.html">人才招聘</a></li>
-                    </li>
+                    <li><a href="./index.html">关于CDMC</a></li>
+                    <li><a href="./team.html">集团业务</a></li>
+                    <li><a href="./news.html">新闻快讯</a></li>
+                    <li><a href="./contact.html">行业峰会</a></li>
+                    <li><a href="./hire.html">招聘培训</a></li>
+                    <li><a href="./hire.html">联系我们</a></li>
                 </ul>
+                <p class="lang">
+                    <a href="./hire.html">ENGLISH</a>
+                </p>
             </div>
         </nav>
     </div>
