--- a/src/html/common/footer.html
+++ b/src/html/common/footer.html
@@ -48,8 +48,8 @@
         	</div>
     	</div>
     </footer>
-    <!--<script src="../js/jquery.min.js"></script>-->
-    <!--<script src="../js/bootstrap.min.js"></script>-->
+    <script src="../lib/jquery.min.js"></script>
+    <script src="../lib/slick/slick.min.js"></script>
     <script src="../js/app.js"></script>
 </body>
 </html>
