--- a/src/html/common/header.html
+++ b/src/html/common/header.html
@@ -7,4 +7,5 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1,user-scalable=no">
     <link rel="shortcut icon" href="../img/CDMC-logo.png">
     <link rel="stylesheet" href="../css/app.css">
+    <link rel="stylesheet" href="../lib/slick/slick.css">
 </head>
