--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,103 +3,51 @@
 <!--include('./common/navigator.html')-->
 <div class="site-main index">
     <!-- banner -->
-    <div id="banner-carousel" class="carousel slide">
-        <ol class="carousel-indicators">
-            <li data-target="#banner-carousel" data-slide-to="0" class="active"></li>
-            <li data-target="#banner-carousel" data-slide-to="1"></li>
-            <li data-target="#banner-carousel" data-slide-to="2"></li>
-        </ol>
-
-        <div class="carousel-inner">
-            <div class="item active">
-                <img src="../img/banner-1.jpg">
-                <div class="carousel-caption"></div>
-            </div>
-            <div class="item">
-                <img src="../img/banner-2.jpg">
-                <div class="carousel-caption"></div>
-            </div>
-            <div class="item">
-                <img src="../img/banner-3.jpg">
-                <div class="carousel-caption"></div>
-            </div>
-        </div>
-
-        <a class="left carousel-control" href="#banner-carousel" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#banner-carousel" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-
-    <!-- advertisement -->
-    <div class="container advertisement-container">
+    <div id="banner">
+        <img src="../img/bg.jpg" alt="" class="bg">
         <div class="heading">
-            <h2>会天下<i></i>若比邻</h2>
-
-            <div>MEETS THE WORLD, LIKE NEIGHBOR</div>
+            <p class="name">CDMC Events</p>
+            <p class="title-en">Asian Conference Leader</p>
+            <p class="title-cn">亚洲国际第一品牌</p>
         </div>
-        <div id="advertisement-carousel" class="carousel slide">
-            <div class="carousel-inner">
-                <div class="item active">
-                    <img src="../img/advertise-1.png" />
-                    <div class="carousel-caption meeting-caption meeting-planning">
-                        <i></i>
-                        <h5>会议策划</h5>
-                        <h4>会邻平台,链接更可靠的人脉</h4>
-                        <div>会邻解决方案分为平台和服务两块. 平台包括主办方活动管理平台 (简称DB) 和参会人社交平台 (简称CAP) 两部分工具框架, 服务包括策划咨询, 会议承接等线下服务对接.
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="../img/advertise-2.png">
-                    <div class="carousel-caption meeting-caption meeting-marketing">
-                        <i></i>
-                        <h5>会议营销</h5>
-                        <h4>会邻平台,链接更可靠的人脉</h4>
-                        <div>会邻解决方案分为平台和服务两块. 平台包括主办方活动管理平台 (简称DB) 和参会人社交平台 (简称CAP) 两部分工具框架, 服务包括策划咨询, 会议承接等线下服务对接.
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="../img/advertise-3.png" />
-                    <div class="carousel-caption meeting-caption meeting-operation">
-                        <i></i>
-                        <h5>会议运营</h5>
-                        <h4>会邻平台,链接更可靠的人脉</h4>
-                        <div>会邻解决方案分为平台和服务两块. 平台包括主办方活动管理平台 (简称DB) 和参会人社交平台 (简称CAP) 两部分工具框架, 服务包括策划咨询, 会议承接等线下服务对接.
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="carousel-control-container">
-                <button class="btn btn-primary organizer">点击成为主办方</button>
-                <a class="left carousel-control" href="#advertisement-carousel" data-slide="prev">
-                    <span class="ad-slide-arrow arrow-left"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="right carousel-control" href="#advertisement-carousel" data-slide="next">
-                    <span class="ad-slide-arrow arrow-right"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-
-            <a class="left carousel-control carousel-control-original" href="#advertisement-carousel" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control carousel-control-original" href="#advertisement-carousel" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
+        <div class="bottom-block">
+            <ul class="nav navbar-nav">
+                <li class="active bd-right"><a href="#">CDMC</a></li>
+                <li class="bd-right"><a href="#">中国海洋油气大会</a></li>
+                <li class="bd-right"><a href="#">中国国际储能电站大会</a></li>
+                <li><a href="#">主题公园与景区</a></li>
+            </ul>
+        </div>  
     </div>
 
-    <div class="social"><img src="../img/pic-social.jpg" /></div>
+    <!-- video -->
+    <div id="video-container">
+        <div class="video-slide">
+            <div class="thumb">
+                <a href="http://v.youku.com/v_show/id_XMTM1NzcyMTcyMA==.html" title="孙红雷教你当顶级大厨" data-from="1-1" target="video"></a>
+                <i class="bg"></i>                                               
+                <img class="quic" src="http://r4.ykimg.com/05150000574FA24E67BC3D4E7602E126">
+            </div>
+
+            <div class="thumb">
+                <a href="http://v.youku.com/v_show/id_XMTM1NzcyMTcyMA==.html" title="孙红雷教你当顶级大厨" data-from="1-1" target="video"></a>
+                <i class="bg"></i>                                               
+                <img class="quic" src="http://r4.ykimg.com/05150000574FA24E67BC3D4E7602E126">
+            </div>
+
+            <div class="thumb">
+                <a href="http://v.youku.com/v_show/id_XMTM1NzcyMTcyMA==.html" title="孙红雷教你当顶级大厨" data-from="1-1" target="video"></a>
+                <i class="bg"></i>                                               
+                <img class="quic" src="http://r4.ykimg.com/05150000574FA24E67BC3D4E7602E126">
+            </div>
+
+            <div class="thumb">
+                <a href="http://v.youku.com/v_show/id_XMTM1NzcyMTcyMA==.html" title="孙红雷教你当顶级大厨" data-from="1-1" target="video"></a>
+                <i class="bg"></i>                                               
+                <img class="quic" src="http://r4.ykimg.com/05150000574FA24E67BC3D4E7602E126">
+            </div>
+        </div>
+    </div>
 
     <!-- platform -->
     <div class="container platform-container">
@@ -161,71 +109,6 @@
                 <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
             </a>
-        </div>
-    </div>
-
-    <!-- case -->
-    <div class="organizer-cases-container">
-        <div class="container">
-            <div class="heading">
-                <h2>主办方案例</h2>
-                <div>ORGAIZER CASE</div>
-                <p>会邻从大行业上分为互联网、信息技术、金融财经、能源环保、医疗医药、消费与服务、文化娱乐、工业制造等八大行业，在这八大行业中又偏重于高市场化程度、有投融资对接需求的国家战略新兴行业，如移动互联网、物联网云计算、投融资、互联网金融、新能源（汽车）、智能制造等会议/活动频次相对较高的行业。</p>
-            </div>
-
-            <ul class="row case-list">
-                <li class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="case-thumbnail">
-                        <img src="../img/index-demo.png">
-                        <div>
-                            <span>阅读量<i>1000</i></span>
-                            <span>参会人<i>500</i>人</span>
-                        </div>
-                    </div>
-                    <div class="case-detail">
-                        <h4>会议名称</h4>
-                        <div class="location"><i></i>中国, 深圳</div>
-                        <div class="date"><i></i>2015年6月11日 09:00 ~ 18:00</div>
-                        <p>会议介绍上海会邻网络技术有限公司（EVENTSLIN.COM 简称“会邻”）成立于2014年10月。</p>
-                        <p>主办方谁谁谁和谁谁谁</p>
-                        <a href="">READ MORE >></a>
-                    </div>
-                </li>
-                <li class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="case-thumbnail">
-                        <img src="../img/index-demo.png">
-                        <div>
-                            <span>阅读量<i>1000</i></span>
-                            <span>参会人<i>500</i>人</span>
-                        </div>
-                    </div>
-                    <div class="case-detail">
-                        <h4>会议名称</h4>
-                        <div class="location"><i></i>中国, 深圳</div>
-                        <div class="date"><i></i>2015年6月11日 09:00 ~ 18:00</div>
-                        <p>会议介绍上海会邻网络技术有限公司（EVENTSLIN.COM 简称“会邻”）成立于2014年10月。</p>
-                        <p>主办方谁谁谁和谁谁谁</p>
-                        <a href="">READ MORE >></a>
-                    </div>
-                </li>
-                <li class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="case-thumbnail">
-                        <img src="../img/index-demo.png">
-                        <div>
-                            <span>阅读量<i>1000</i></span>
-                            <span>参会人<i>500</i>人</span>
-                        </div>
-                    </div>
-                    <div class="case-detail">
-                        <h4>会议名称</h4>
-                        <div class="location"><i></i>中国, 深圳</div>
-                        <div class="date"><i></i>2015年6月11日 09:00 ~ 18:00</div>
-                        <p>会议介绍上海会邻网络技术有限公司（EVENTSLIN.COM 简称“会邻”）成立于2014年10月。</p>
-                        <p>主办方谁谁谁和谁谁谁</p>
-                        <a href="">READ MORE >></a>
-                    </div>
-                </li>
-            </ul>
         </div>
     </div>
 
