--- a/src/html/index.html
+++ b/src/html/index.html
@@ -49,81 +49,16 @@
         </div>
     </div>
 
-    <!-- platform -->
-    <div class="container platform-container">
+    <!-- business -->
+    <div id="business">
         <div class="heading">
-            <h2>链接更可靠的人脉</h2>
-            <div>LINKS A MORE RELIABLE PERSONAL CONNECTION</div>
+            <h4>集团业务</h4>
+            <p>group business</p>
         </div>
-        <div id="platform-carousel" class="carousel slide">
-            <div class="carousel-inner">
-                <div class="item active">
-                    <img src="../img/platform-1.png" />
-                    <div class="carousel-caption platform-caption connection">
-                        <i></i>
-                        <h5>人脉</h5>
-                        <h4>会邻平台,链接更可靠的人脉</h4>
-                        <div>会邻解决方案分为平台和服务两块. 平台包括主办方活动管理平台 (简称DB) 和参会人社交平台 (简称CAP) 两部分工具框架, 服务包括策划咨询, 会议承接等线下服务对接.
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="../img/platform-2.png">
-                    <div class="carousel-caption platform-caption meeting">
-                        <i></i>
-                        <h5>找会</h5>
-                        <h4>会邻平台,链接更可靠的人脉</h4>
-                        <div>会邻解决方案分为平台和服务两块. 平台包括主办方活动管理平台 (简称DB) 和参会人社交平台 (简称CAP) 两部分工具框架, 服务包括策划咨询, 会议承接等线下服务对接.
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="../img/platform-3.png" />
-                    <div class="carousel-caption platform-caption dating">
-                        <i></i>
-                        <h5>约见</h5>
-                        <h4>会邻平台,链接更可靠的人脉</h4>
-                        <div>会邻解决方案分为平台和服务两块. 平台包括主办方活动管理平台 (简称DB) 和参会人社交平台 (简称CAP) 两部分工具框架, 服务包括策划咨询, 会议承接等线下服务对接.
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="carousel-control-container">
-                <button class="btn btn-primary service" data-toggle="modal" data-target="#qr-code-modal"><i></i>点击体验会邻服务</button>
-                <a class="left carousel-control" href="#platform-carousel" data-slide="prev">
-                    <span class="ad-slide-arrow arrow-left"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="right carousel-control" href="#platform-carousel" data-slide="next">
-                    <span class="ad-slide-arrow arrow-right"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-
-            <a class="left carousel-control carousel-control-original" href="#platform-carousel" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control carousel-control-original" href="#platform-carousel" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+        <div class="container">
+            
         </div>
     </div>
-
-    <!-- qr code modal -->
-    <div class="modal fade" id="qr-code-modal" tabindex="-1">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <button class="close" data-dismiss="modal" aria-label="Close"><span>&times;</span></button>
-                    <img src="../img/pic-qr-code.jpg">
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 
 </div>
 </body>
