--- a/src/html/index.html
+++ b/src/html/index.html
@@ -25,27 +25,46 @@
         <div class="video-slide">
             <div class="thumb">
                 <a href="http://v.youku.com/v_show/id_XMTM1NzcyMTcyMA==.html" title="孙红雷教你当顶级大厨" data-from="1-1" target="video"></a>
-                <i class="bg"></i>                                               
                 <img class="quic" src="http://r4.ykimg.com/05150000574FA24E67BC3D4E7602E126">
+                <div class="desc">
+                    中国园区产业大会2016 回顾
+                    <i class="glyphicon glyphicon-play"></i>
+                </div>
+                <div class="desc-bg"></div>
             </div>
 
             <div class="thumb">
                 <a href="http://v.youku.com/v_show/id_XMTM1NzcyMTcyMA==.html" title="孙红雷教你当顶级大厨" data-from="1-1" target="video"></a>
-                <i class="bg"></i>                                               
                 <img class="quic" src="http://r4.ykimg.com/05150000574FA24E67BC3D4E7602E126">
+                <div class="desc">
+                    中国园区产业大会2016 回顾
+                    <i class="glyphicon glyphicon-play"></i>
+                </div>
+                <div class="desc-bg"></div>
             </div>
+
 
             <div class="thumb">
                 <a href="http://v.youku.com/v_show/id_XMTM1NzcyMTcyMA==.html" title="孙红雷教你当顶级大厨" data-from="1-1" target="video"></a>
-                <i class="bg"></i>                                               
                 <img class="quic" src="http://r4.ykimg.com/05150000574FA24E67BC3D4E7602E126">
+                <div class="desc">
+                    中国园区产业大会2016 回顾
+                    <i class="glyphicon glyphicon-play"></i>
+                </div>
+                <div class="desc-bg"></div>
             </div>
+
 
             <div class="thumb">
                 <a href="http://v.youku.com/v_show/id_XMTM1NzcyMTcyMA==.html" title="孙红雷教你当顶级大厨" data-from="1-1" target="video"></a>
-                <i class="bg"></i>                                               
                 <img class="quic" src="http://r4.ykimg.com/05150000574FA24E67BC3D4E7602E126">
+                <div class="desc">
+                    中国园区产业大会2016 回顾
+                    <i class="glyphicon glyphicon-play"></i>
+                </div>
+                <div class="desc-bg"></div>
             </div>
+
         </div>
     </div>
 
@@ -56,7 +75,61 @@
             <p>group business</p>
         </div>
         <div class="container">
-            
+            <div class="feature" id="f1">
+                <div class="row-1">
+                    <img src="../img/feature-1.png" alt="">
+                    <p class="big">主办业务</p>
+                    <p>HOST</p>
+                </div>
+                <p class="detail">
+                    智能制造，海洋油气，天然气，印尼煤炭，新能源汽车，储能，主题公园，互联网金融..
+                </p>
+            </div>
+
+            <div class="feature" id="f2">
+                <div class="row-1">
+                    <img src="../img/feature-2.png" alt="">
+                    <p class="big">承接及定制会议</p>
+                    <p>UNDERTAKE</p>
+                </div>
+                <p class="detail">
+                    为政府，企业，协会提供一站式商务服务会议解决方案。
+                </p>
+            </div>
+
+            <div class="feature" id="f3">
+                <div class="row-1">
+                    <img src="../img/feature-3.png" alt="">
+                    <p class="big">产业园区</p>
+                    <p>INDUSTRIAL PARK</p>
+                </div>
+                <p class="detail">
+                    招商及招商活动，规划，咨询，委托运营，政府引导资金。
+                </p>
+            </div>
+
+            <div class="feature" id="f4">
+                <div class="row-1">
+                    <img src="../img/feature-2.png" alt="">
+                    <p class="big">互联网应用团队</p>
+                    <p>INTERNET</p>
+                </div>
+                <p class="detail">
+                    决策者旗下互联网团队组织策划网站，app应用，约见系统等一系列在线应用程序。
+                </p>
+            </div>
+
+            <div class="feature" id="f5">
+                <div class="row-1">
+                    <img src="../img/feature-1.png" alt="">
+                    <p class="big">麦峰医学科技</p>
+                    <p>MEDICAL CONSULTANCY</p>
+                </div>
+                <p class="detail">
+                    组织各类国际医学年会，国际医学论坛，国际医学研讨会，国际学术交流，国际医学培训等。
+                </p>
+            </div>
+
         </div>
     </div>
 
