--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,18 +4,25 @@
 <div class="site-main index">
     <!-- banner -->
     <div id="banner">
-        <img src="../img/bg.jpg" alt="" class="bg">
+        <div class="slide">
+            <img src="../img/bg.jpg">
+            <img src="../img/bg-2.jpg">
+            <img src="../img/bg.jpg">
+            <img src="../img/bg-2.jpg">
+        </div>
+
         <div class="heading">
             <p class="name">CDMC Events</p>
             <p class="title-en">Asian Conference Leader</p>
             <p class="title-cn">亚洲国际第一品牌</p>
         </div>
+
         <div class="bottom-block">
-            <ul class="nav navbar-nav">
-                <li class="active bd-right"><a href="#">CDMC</a></li>
-                <li class="bd-right"><a href="#">中国海洋油气大会</a></li>
-                <li class="bd-right"><a href="#">中国国际储能电站大会</a></li>
-                <li><a href="#">主题公园与景区</a></li>
+            <ul>
+                <li class="active bd-right" sid="0"><a href="#">CDMC</a></li>
+                <li class="bd-right" sid="1"><a href="#">中国海洋油气大会</a></li>
+                <li class="bd-right" sid="2"><a href="#">中国国际储能电站大会</a></li>
+                <li sid="3"><a href="#">主题公园与景区</a></li>
             </ul>
         </div>  
     </div>
