--- a/src/html/common/navigator.html
+++ b/src/html/common/navigator.html
@@ -1,34 +1,33 @@
 <header class="site-header">
-    <div class="container">
-        <nav class="navbar" role="navigation">
-            <div class="navbar-header">
-                <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#main-navbar">
-                    <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">会邻</a>
-            </div>
-            <div id="main-navbar" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <!--<li><a href="./index.html">关于CDMC</a></li>-->
-                    <!--<li><a href="./team.html">集团业务</a></li>-->
-                    <!--<li><a href="./news.html">新闻快讯</a></li>-->
-                    <!--<li><a href="./contact.html">行业峰会</a></li>-->
-                    <!--<li><a href="./hire.html">招聘培训</a></li>-->
-                    <!--<li><a href="./hire.html">联系我们</a></li>-->
-
-                    <li><a href="./aboutus.html">关于CDMC</a></li>
-                    <li><a href="./business.html">集团业务</a></li>
-                    <li><a href="./group_news.html">新闻快讯</a></li>
-                    <li><a href="./contact.html">行业峰会</a></li>
-                    <li><a href="./hire.html">招聘培训</a></li>
-                    <li><a href="./hire.html">联系我们</a></li>
-
-                </ul>
-                <p class="lang">
-                    <a href="./hire.html">ENGLISH</a>
-                </p>
-            </div>
-        </nav>
-    </div>
     <div class="bg"></div>
+    <div class="container-float">
+        <div class="container">
+            <nav class="navbar" role="navigation">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="./">CDMC</a>
+                </div>
+                <div id="main-navbar" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <!--<li><a href="./index.html">关于CDMC</a></li>-->
+                        <!--<li><a href="./team.html">集团业务</a></li>-->
+                        <!--<li><a href="./news.html">新闻快讯</a></li>-->
+                        <!--<li><a href="./contact.html">行业峰会</a></li>-->
+                        <!--<li><a href="./hire.html">招聘培训</a></li>-->
+                        <!--<li><a href="./hire.html">联系我们</a></li>-->
+
+                        <li><a href="./aboutus.html">关于CDMC</a></li>
+                        <li><a href="./business.html">集团业务</a></li>
+                        <li><a href="./group_news.html">新闻快讯</a></li>
+                        <li><a href="./contact.html">行业峰会</a></li>
+                        <li><a href="./hire.html">招聘培训</a></li>
+                        <li><a href="./hire.html">联系我们</a></li>
+
+                    </ul>
+                    <p class="lang">
+                        <a href="./hire.html">ENGLISH</a>
+                    </p>
+                </div>
+            </nav>
+        </div>
+    </div>
 </header>
