refine main page

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -29,49 +29,64 @@
 
     <!-- video -->
     <div id="video-container">
-        <div class="video-slide">
-            <div class="thumb">
-                <a href="http://v.youku.com/v_show/id_XMTM1NzcyMTcyMA==.html" title="孙红雷教你当顶级大厨" data-from="1-1" target="video"></a>
-                <img class="quic" src="http://r4.ykimg.com/05150000574FA24E67BC3D4E7602E126">
-                <div class="desc">
-                    中国园区产业大会2016 回顾
-                    <i class="glyphicon glyphicon-play"></i>
+        <div class='slick-prev-arrow slick-arrow'><i class='glyphicon glyphicon-chevron-left'></i></div>
+        <div class='slick-next-arrow slick-arrow'><i class='glyphicon glyphicon-chevron-right'></i></div>
+        <div class="slide-contaienr">
+            <div class="video-slide">
+                <div class="thumb">
+                    <iframe src="http://player.youku.com/embed/XMTU4ODg0NDY0NA==" frameborder=0 allowfullscreen></iframe>
+                    <div class="desc">
+                        中国园区产业大会2016 回顾
+                    </div>
+                    <div class="desc-bg"></div>
                 </div>
-                <div class="desc-bg"></div>
-            </div>
 
-            <div class="thumb">
-                <a href="http://v.youku.com/v_show/id_XMTM1NzcyMTcyMA==.html" title="孙红雷教你当顶级大厨" data-from="1-1" target="video"></a>
-                <img class="quic" src="http://r4.ykimg.com/05150000574FA24E67BC3D4E7602E126">
-                <div class="desc">
-                    中国园区产业大会2016 回顾
-                    <i class="glyphicon glyphicon-play"></i>
+                <div class="thumb">
+                    <a href="#" class="link-block">
+                        <img src="../img/bg.jpg">
+                        <span>2016中国产业园区大会回顾</span>
+                    </a>
+                    <div class="desc">
+                        中国园区产业大会2016 回顾
+                    </div>
+                    <div class="desc-bg"></div>
                 </div>
-                <div class="desc-bg"></div>
-            </div>
 
 
-            <div class="thumb">
-                <a href="http://v.youku.com/v_show/id_XMTM1NzcyMTcyMA==.html" title="孙红雷教你当顶级大厨" data-from="1-1" target="video"></a>
-                <img class="quic" src="http://r4.ykimg.com/05150000574FA24E67BC3D4E7602E126">
-                <div class="desc">
-                    中国园区产业大会2016 回顾
-                    <i class="glyphicon glyphicon-play"></i>
+                <div class="thumb">
+                    <a href="#" class="link-block">
+                        <img src="../img/bg.jpg">
+                        <span>2016中国产业园区大会回顾</span>
+                    </a>
+                    <div class="desc">
+                        中国园区产业大会2016 回顾
+                    </div>
+                    <div class="desc-bg"></div>
                 </div>
-                <div class="desc-bg"></div>
-            </div>
 
 
-            <div class="thumb">
-                <a href="http://v.youku.com/v_show/id_XMTM1NzcyMTcyMA==.html" title="孙红雷教你当顶级大厨" data-from="1-1" target="video"></a>
-                <img class="quic" src="http://r4.ykimg.com/05150000574FA24E67BC3D4E7602E126">
-                <div class="desc">
-                    中国园区产业大会2016 回顾
-                    <i class="glyphicon glyphicon-play"></i>
+                <div class="thumb">
+                    <a href="#" class="link-block">
+                        <img src="../img/bg.jpg">
+                        <span>2016中国产业园区大会回顾</span>
+                    </a>
+                    <div class="desc">
+                        中国园区产业大会2016 回顾
+                    </div>
+                    <div class="desc-bg"></div>
                 </div>
-                <div class="desc-bg"></div>
-            </div>
 
+                <div class="thumb">
+                    <a href="#" class="link-block">
+                        <img src="../img/bg-2.jpg">
+                        <span>2016中国产业园区大会回顾</span>
+                    </a>
+                    <div class="desc">
+                        中国园区产业大会2016 回顾
+                    </div>
+                    <div class="desc-bg"></div>
+                </div>
+            </div>
         </div>
     </div>
 
