--- a/src/html/business.html
+++ b/src/html/business.html
@@ -1,8 +1,7 @@
 <!--include('./common/header.html')-->
 <body class="page-business">
 <!--include('./common/navigator.html')-->
-<!--<div class="container site-main contactus">-->
-<div class="container site-main business">
+<div class="container site-content business">
     <div class="col-md-2" role="navigation">
         <nav class="nav bs-docs-sidebar">
             <ul class="nav bs-docs-sidenav">
