--- a/src/html/common/navigator.html
+++ b/src/html/common/navigator.html
@@ -8,16 +8,9 @@
                 </div>
                 <div id="main-navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <!--<li><a href="./index.html">关于CDMC</a></li>-->
-                        <!--<li><a href="./team.html">集团业务</a></li>-->
-                        <!--<li><a href="./news.html">新闻快讯</a></li>-->
-                        <!--<li><a href="./contact.html">行业峰会</a></li>-->
-                        <!--<li><a href="./hire.html">招聘培训</a></li>-->
-                        <!--<li><a href="./hire.html">联系我们</a></li>-->
-
                         <li><a href="./aboutus.html">关于CDMC</a></li>
                         <li><a href="./business.html">集团业务</a></li>
-                        <li><a href="./group_news.html">新闻快讯</a></li>
+                        <li><a href="./news/company.html">新闻快讯</a></li>
                         <li><a href="./contact.html">行业峰会</a></li>
                         <li><a href="./hire.html">招聘培训</a></li>
                         <li><a href="./hire.html">联系我们</a></li>
