--- a/src/html/aboutus.html
+++ b/src/html/aboutus.html
@@ -1,8 +1,7 @@
 <!--include('./common/header.html')-->
 <body class="page-aboutus">
 <!--include('./common/navigator.html')-->
-<div class="container site-main aboutus">
-    <!--<div class="container site-main about">-->
+<div class="container site-content aboutus">
     <div class="col-md-3" role="navigation">
         <nav class="bs-docs-sidebar">
             <ul class="nav bs-docs-sidenav">
