--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,10 +5,10 @@
     <!-- banner -->
     <div id="banner">
         <div class="slide">
-            <img src="../img/bg.jpg">
-            <img src="../img/bg-2.jpg">
-            <img src="../img/bg.jpg">
-            <img src="../img/bg-2.jpg">
+            <img src="../img/banner.jpg">
+            <img src="../img/banner.jpg">
+            <img src="../img/banner.jpg">
+            <img src="../img/banner.jpg">
         </div>
 
         <div class="heading">
@@ -55,7 +55,7 @@
 
                 <div class="thumb">
                     <a href="#" class="link-block">
-                        <img src="../img/bg.jpg">
+                        <img src="../img/banner.jpg">
                         <span>2016中国产业园区大会回顾</span>
                     </a>
                     <div class="desc">
@@ -67,7 +67,7 @@
 
                 <div class="thumb">
                     <a href="#" class="link-block">
-                        <img src="../img/bg.jpg">
+                        <img src="../img/banner.jpg">
                         <span>2016中国产业园区大会回顾</span>
                     </a>
                     <div class="desc">
@@ -132,7 +132,7 @@
 
             <div class="feature" id="f4">
                 <div class="row-1">
-                    <img src="../img/feature-2.png" alt="">
+                    <img src="../img/feature-4.png" alt="">
                     <p class="big">互联网应用团队</p>
                     <p>INTERNET</p>
                 </div>
@@ -143,7 +143,7 @@
 
             <div class="feature" id="f5">
                 <div class="row-1">
-                    <img src="../img/feature-1.png" alt="">
+                    <img src="../img/feature-5.png" alt="">
                     <p class="big">麦峰医学科技</p>
                     <p>MEDICAL CONSULTANCY</p>
                 </div>
