create the sub directory for aboutus&business pages

--- a/src/html/about/navigator.html
+++ b/src/html/about/navigator.html
@@ -17,9 +17,9 @@
                         <!--<li><a href="./hire.html">招聘培训</a></li>-->
                         <!--<li><a href="./hire.html">联系我们</a></li>-->
 
-                        <li><a href="../about/aboutus.html">关于CDMC</a></li>
+                        <li><a href="./aboutus.html">关于CDMC</a></li>
                         <li><a href="../business/business.html">集团业务</a></li>
-                        <li><a href="./company.html">新闻快讯</a></li>
+                        <li><a href="../news/company.html">新闻快讯</a></li>
                         <li><a href="../contact.html">行业峰会</a></li>
                         <li><a href="../hire.html">招聘培训</a></li>
                         <li><a href="../hire.html">联系我们</a></li>
