--- a/src/html/business/business.html
+++ b/src/html/business/business.html
@@ -1,6 +1,6 @@
-<!--include('./common/header.html')-->
+<!--include('./header.html')-->
 <body class="page-business">
-<!--include('./common/navigator.html')-->
+<!--include('./navigator.html')-->
 <div class="container site-content business">
     <div class="col-md-2" role="navigation">
         <nav class="nav bs-docs-sidebar">
@@ -15,7 +15,7 @@
     </div>
 
     <div id="content" class="col-md-10">
-        <img src="../img/about.png">
+        <img src="../../img/about.png">
         <div>
             <hr align="left"/>
             <h2>麦峰医学科技</h2>
@@ -37,4 +37,4 @@
     </div>
 </div>
 <!--</div>-->
-<!--include('./common/footer.html')-->
+<!--include('./footer.html')-->
