--- a/src/html/about/aboutus.html
+++ b/src/html/about/aboutus.html
@@ -1,6 +1,6 @@
-<!--include('./common/header.html')-->
+<!--include('./header.html')-->
 <body class="page-aboutus">
-<!--include('./common/navigator.html')-->
+<!--include('./navigator.html')-->
 <div class="container site-content aboutus">
     <div class="col-md-3" role="navigation">
         <nav class="bs-docs-sidebar">
@@ -108,4 +108,4 @@
     </div>
 </div>
 <!--</div>-->
-<!--include('./common/footer.html')-->
+<!--include('./footer.html')-->
