--- a/src/html/business/index.html
+++ b/src/html/business/index.html
@@ -8,7 +8,7 @@
                 <li><a href="./organizer.html"><span class="glyphicon glyphicon-record" aria-hidden="true"></span> 主办会议</a></li>
                 <li><a href="./undertake.html"><span class="glyphicon glyphicon-record" aria-hidden="true"></span> 承办会议</a></li>
                 <li><a href="./park.html"><span class="glyphicon glyphicon-record" aria-hidden="true"></span> 园区大会</a></li>
-                <li class="active"><a href="./medical.html"><span class="glyphicon glyphicon-record" aria-hidden="true"></span> 麦峰医疗</a></li>
+                <li><a href="./medical.html"><span class="glyphicon glyphicon-record" aria-hidden="true"></span> 麦峰医疗</a></li>
                 <li><a href="./internet.html"><span class="glyphicon glyphicon-record" aria-hidden="true"></span> 互联网团队</a></li>
             </ul>
         </nav>
