--- a/src/html/about/index.html
+++ b/src/html/about/index.html
@@ -4,8 +4,8 @@
 <div class="container site-content aboutus">
     <div class="col-md-3" role="navigation">
         <nav class="bs-docs-sidebar">
-            <ul class="nav bs-docs-sidenav ul-block">
-                <li class="active"><a href="./aboutus.html">
+            <ul class="nav bs-docs-sidenav">
+                <li><a href="./aboutus.html">
                     <span class="glyphicon glyphicon-record" aria-hidden="true"></span> 关于公司</a>
                     <ul class="sub-ul">
                         <li><a href="./vision.html">战略愿景</a></li>
