--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -1,31 +1,7 @@
 <!--include('./common/header.html')-->
 <body class="page-contactus">
 <!--include('./common/navigator.html')-->
-<div class="container site-main contactus">
-    <div class="container">
-        <h3 class="title">联系我们</h3>
-        <h4>上海会邻网络技术有限公司</h4>
-        <p>地址: 上海市浦东新区达尔文路88号半岛科技园3号楼4层</p>
-        <p>电话: 021-0000 0000</p>
-        <p>邮箱: service@eventslin.com</p>
-    </div>
-    <div class="container">
-        <h3 class="title">意见反馈</h3>
-        <div>在这里,您可以写下任何关于会邻的问题,我们也会尽快回复. 欢迎随时联系我们.</div>
-        <form class="question-form">
-            <div class="col-xs-12 col-md-4 col-lg-4"><input class="form-control" type="text" placeholder="您的姓名"></div>
-            <div class="col-xs-12 col-md-4 col-lg-4"><input class="form-control" type="email" placeholder="您的邮箱"></div>
-            <div class="col-xs-12 col-md-4 col-lg-4"><input class="form-control" type="text" placeholder="您的公司"></div>
-            <div class="col-xs-12 col-md-12 col-lg-12">
-                <textarea class="form-control" placeholder="您的问题" rows="6"></textarea>
-            </div>
-            <input type="submit" class="btn btn-default col-xs-11 col-lg-1  btn-send-question" value="发送">
-        </form>
-    </div>
-    <div class="container footer">
-        <h3 class="title">了解更多</h3>
-        <span>扫一扫,添加会邻官方微信平台</span>
-        <div class="qr-code"></div>
-    </div>
+<div class="container site-content contactus">
+
 </div>
 <!--include('./common/footer.html')-->
