contact and hire

--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -2,6 +2,13 @@
 <body class="page-contactus">
 <!--include('./common/navigator.html')-->
 <div class="container site-content contactus">
+	<h2>决策者会议集团</h2>
+	<p>上海市长逸路15号复旦软件园A幢901-910室</p>
+	<p>邮编：200441</p>
 
+	<p>电话: +86 21 6840 7631&nbsp;/&nbsp;  +86 21 63931899</p>
+	<p>传真: +86 21 6840 7632</p>
+    <p>电子邮件: <a href="mailto:info@chinadecisionmakers.com">info@chinadecisionmakers.com</a><p>
+    <iframe width="580" height="250" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://ditu.google.cn/maps?f=q&amp;source=s_q&amp;hl=zh-CN&amp;geocode=&amp;q=%E4%B8%8A%E6%B5%B7%E5%B8%82%E9%95%BF%E9%80%B8%E8%B7%AF15%E5%8F%B7&amp;aq=&amp;sll=31.230393,121.473704&amp;sspn=1.409139,2.903137&amp;vpsrc=0&amp;brcurrent=3,0x35b27381c275b7cb:0xf4c7e8c6b463639e,0,0x35b2714180cd65c7:0xa5bef294e91108e7%3B5,0,0&amp;ie=UTF8&amp;hq=&amp;hnear=%E4%B8%8A%E6%B5%B7%E5%B8%82%E5%AE%9D%E5%B1%B1%E5%8C%BA%E9%95%BF%E9%80%B8%E8%B7%AF15%E5%8F%B7&amp;t=m&amp;z=14&amp;ll=31.339586,121.494196&amp;output=embed"></iframe>
 </div>
 <!--include('./common/footer.html')-->
