--- a/src/html/common/navigator.html
+++ b/src/html/common/navigator.html
@@ -10,12 +10,12 @@
                 </div>
                 <div id="main-navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="./about/aboutus.html">关于CDMC</a></li>
-                        <li><a href="./business/business.html">集团业务</a></li>
-                        <li><a href="./news/company.html">新闻快讯</a></li>
-                        <li><a href="./events.html">行业峰会</a></li>
-                        <li><a href="./hire.html">招聘培训</a></li>
-                        <li><a href="./contact.html">联系我们</a></li>
+                        <li><a href="./about/aboutus.html" idx="about">关于CDMC</a></li>
+                        <li><a href="./business/business.html" idx="business">集团业务</a></li>
+                        <li><a href="./news/company.html" idx="news">新闻快讯</a></li>
+                        <li><a href="./events.html" idx="events">行业峰会</a></li>
+                        <li><a href="./hire.html" idx="hire">招聘培训</a></li>
+                        <li><a href="./contact.html" idx="contact">联系我们</a></li>
 
                     </ul>
                     <p class="lang">
