--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -1,5 +1,5 @@
 <!--include('./common/header.html')-->
-<body class="page-contactus">
+<body class="page-contactus" idx="contact">
 <!--include('./common/navigator.html')-->
 <div class="container site-content contactus">
 	<h2>决策者会议集团</h2>
