--- a/src/html/events.html
+++ b/src/html/events.html
@@ -1,64 +1,93 @@
 <!--include('./common/header.html')-->
-<body class="page-events">
+<body class="page-events" idx="events">
 <!--include('./common/navigator.html')-->
 <div class="container site-content">
-    <ul class="event-list">
-        <li>
-            <a href="http://www.essc.org.cn/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/esa.png"></a>
-            <a href="http://www.essc.org.cn/" target="_blank" class="name">2016第六届中国国际储能电站大会</a>
-            <p>2016年4月24-26日  中国 深圳</p>
-        </li>
-        <li>
-            <a href="http://www.cpf-annual.com" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/573b3d6b00a0d413.jpg"></a>
-            <a href="http://www.cpf-annual.com" target="_blank" class="name">
-            2016第十届中国石化聚焦峰会</a>
-            <p>2016年5月26日-27日 中国 上海</p>
-        </li>
-        <li>
-            <a href="http://www.theifpi.com/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/ifpi.png"></a>
-            <a href="http://www.theifpi.com/" target="_blank" class="name">第七届互联网金融与支付创新大会2016</a>
-            <p>2016年4月7-8日  中国北京</p>
-        </li>
-        <li>
-            <a href="http://www.tpasa.org.cn/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/tpasa.png"></a>
-            <a href="http://www.tpasa.org.cn/" target="_blank" class="name">2016第五届主题公园与景区国际峰会</a>
-            <p>2016年5月19-20日 中国 上海</p>
-        </li>
-        <li>
-            <a href="http://www.gvc-annual.com/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/r7_06.jpg"></a>
-            <a href="http://www.gvc-annual.com/" target="_blank" class="name">2016第七届绿色汽车峰会</a>
-            <p>2016年5月12-13日 | 中国，深圳</p>
-        </li>
-        <li>
-            <a href="http://www.cors.org.cn/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/cors.png"></a>
-            <a href="http://www.cors.org.cn/" target="_blank" class="name">2016第四届中国全渠道零售峰会</a>
-            <p>2016年5月26日-27日  中国 北京</p>
-        </li>
-        <li>
-            <a href="http://www.gtf.org.cn/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/gtf.jpg"></a>
-            <a href="http://www.gtf.org.cn/" target="_blank" class="name">2016中国燃气轮机聚焦</a>
-            <p>2016年4月27日-28日 中国 深圳</p>
-        </li>
-        <li>
-            <a href="http://www.thecipc.org.cn/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/cipc2016.jpg"></a>
-            <a href="http://www.thecipc.org.cn/" target="_blank" class="name">2016中国产业园区大会</a>
-            <p>2016年11月9-10日  中国 上海</p>
-        </li>
-        <li>
-            <a href="http://www.gaaf-annual.com/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/gaaf.jpg"></a>
-            <a href="http://www.gaaf-annual.com/" target="_blank" class="name">2016全球资产配置</a>
-            <p>2016年5月26-27日 中国上海</p>
-        </li>
-        <li>
-            <a href="http://www.ffa-annual.com/cn" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/ffa2016.png"></a>
-            <a href="http://www.ffa-annual.com/cn" target="_blank" class="name"><strong>亚洲FPSO &amp; FLNG大会2016 </strong></a>
-            <p>2016年9月22日-23日 中国·上海</p>
-        </li>
-        <li>
-            <a href="http://www.oc-annual.com/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/oc1.png"></a>
-            <a href="http://www.oc-annual.com/" target="_blank" class="name">2016第十二届中国国际海洋油气大会暨展览会</a>
-            <p>2016年5月26-27日 中国深圳 </p>
-        </li>
-    </ul>
+    <div class="row">
+        <div class="main-event col-xs-8">
+            <a href="http://www.essc.org.cn/" target="_blank"><img src="http://elbucket.qiniudn.com/o_1ajj289is4qgehu1vvj1gmtrr08.jpg?imageMogr2/thumbnail/1436"></a>
+            <p class="name">第八届互联网金融与支付创新年度盛会</p>
+            <p class="date">2016年4月24-26日  中国 深圳</p> 
+            <p class="desc"></p>
+        </div>
+        <div class="col-xs-4 other-events">
+            <a href="http://www.essc.org.cn/" target="_blank" class="thumb"><img src="http://elbucket.qiniudn.com/o_1ahq3qvme16ja1b0npis16adjtd2g.jpg?imageMogr2/thumbnail/210"></a>
+            <a href="http://www.essc.org.cn/" target="_blank" class="thumb"><img src="http://elbucket.qiniudn.com/o_1agpgi39l1iv713np1dsf16ln1j4q11.png?imageMogr2/thumbnail/210"></a>
+            <a href="http://www.essc.org.cn/" target="_blank" class="thumb"><img src="http://elbucket.qiniudn.com/o_1ahgnmhk0jmeo08128ueafnta133.jpg?imageMogr2/thumbnail/210"></a>
+            <a href="http://www.essc.org.cn/" target="_blank" class="thumb"><img src="http://elbucket.qiniudn.com/o_1agphg6u1li610vm1c4ghf881a2t.jpg?imageMogr2/thumbnail/210"></a>
+            <a href="http://www.essc.org.cn/" target="_blank" class="thumb"><img src="http://elbucket.qiniudn.com/o_1ahq3qvme16ja1b0npis16adjtd2g.jpg?imageMogr2/thumbnail/210"></a>
+            <a href="http://www.essc.org.cn/" target="_blank" class="thumb"><img src="http://elbucket.qiniudn.com/o_1agpgtb1811kd16hm1r0b1pv81ctn1v.jpg?imageMogr2/thumbnail/210"></a>
+        </div>
+    </div>
+    <hr>
+
+    <div class="row">
+        <div class="col-xs-9">
+            <ul class="event-list">
+                <li>
+                    <a href="http://www.essc.org.cn/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/esa.png"></a>
+                    <a href="http://www.essc.org.cn/" target="_blank" class="name">2016第六届中国国际储能电站大会</a>
+                    <p>2016年4月24-26日  中国 深圳</p>
+                </li>
+                <li>
+                    <a href="http://www.cpf-annual.com" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/573b3d6b00a0d413.jpg"></a>
+                    <a href="http://www.cpf-annual.com" target="_blank" class="name">
+                    2016第十届中国石化聚焦峰会</a>
+                    <p>2016年5月26日-27日 中国 上海</p>
+                </li>
+                <li>
+                    <a href="http://www.theifpi.com/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/ifpi.png"></a>
+                    <a href="http://www.theifpi.com/" target="_blank" class="name">第七届互联网金融与支付创新大会2016</a>
+                    <p>2016年4月7-8日  中国北京</p>
+                </li>
+                <li>
+                    <a href="http://www.tpasa.org.cn/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/tpasa.png"></a>
+                    <a href="http://www.tpasa.org.cn/" target="_blank" class="name">2016第五届主题公园与景区国际峰会</a>
+                    <p>2016年5月19-20日 中国 上海</p>
+                </li>
+                <li>
+                    <a href="http://www.gvc-annual.com/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/r7_06.jpg"></a>
+                    <a href="http://www.gvc-annual.com/" target="_blank" class="name">2016第七届绿色汽车峰会</a>
+                    <p>2016年5月12-13日 | 中国，深圳</p>
+                </li>
+                <li>
+                    <a href="http://www.cors.org.cn/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/cors.png"></a>
+                    <a href="http://www.cors.org.cn/" target="_blank" class="name">2016第四届中国全渠道零售峰会</a>
+                    <p>2016年5月26日-27日  中国 北京</p>
+                </li>
+                <li>
+                    <a href="http://www.gtf.org.cn/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/gtf.jpg"></a>
+                    <a href="http://www.gtf.org.cn/" target="_blank" class="name">2016中国燃气轮机聚焦</a>
+                    <p>2016年4月27日-28日 中国 深圳</p>
+                </li>
+                <li>
+                    <a href="http://www.thecipc.org.cn/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/cipc2016.jpg"></a>
+                    <a href="http://www.thecipc.org.cn/" target="_blank" class="name">2016中国产业园区大会</a>
+                    <p>2016年11月9-10日  中国 上海</p>
+                </li>
+                <li>
+                    <a href="http://www.gaaf-annual.com/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/gaaf.jpg"></a>
+                    <a href="http://www.gaaf-annual.com/" target="_blank" class="name">2016全球资产配置</a>
+                    <p>2016年5月26-27日 中国上海</p>
+                </li>
+                <li>
+                    <a href="http://www.ffa-annual.com/cn" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/ffa2016.png"></a>
+                    <a href="http://www.ffa-annual.com/cn" target="_blank" class="name"><strong>亚洲FPSO &amp; FLNG大会2016 </strong></a>
+                    <p>2016年9月22日-23日 中国·上海</p>
+                </li>
+                <li>
+                    <a href="http://www.oc-annual.com/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/oc1.png"></a>
+                    <a href="http://www.oc-annual.com/" target="_blank" class="name">2016第十二届中国国际海洋油气大会暨展览会</a>
+                    <p>2016年5月26-27日 中国深圳 </p>
+                </li>
+            </ul>
+        </div>
+        <div class="history-events col-xs-3">
+            <p>往届回顾</p>
+            <a href="http://www.tpasa.org.cn/" target="_blank">第四届中国全渠道零售峰会</a>
+            <a href="http://www.tpasa.org.cn/" target="_blank">第四届中国全渠道零售峰会</a>
+            <a href="http://www.tpasa.org.cn/" target="_blank">第四届中国全渠道零售峰会</a>
+            <a href="http://www.tpasa.org.cn/" target="_blank">第四届中国全渠道零售峰会</a>
+        </div>
+    </div>
 </div>
 <!--include('./common/footer.html')-->
