--- a/src/html/hire.html
+++ b/src/html/hire.html
@@ -1,5 +1,5 @@
 <!--include('./common/header.html')-->
-<body class="page-hire">
+<body class="page-hire" idx="hire">
 <!--include('./common/navigator.html')-->
 <div class="container site-content hire">
     <div style="width:80%;">
