--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,5 +1,5 @@
 <!--include('./common/header.html')-->
-<body class="page-index">
+<body class="page-index" idx="main">
 <!--include('./common/navigator.html')-->
 <div class="site-main index">
     <!-- banner -->
@@ -33,12 +33,8 @@
         <div class='slick-next-arrow slick-arrow'><i class='glyphicon glyphicon-chevron-right'></i></div>
         <div class="slide-contaienr">
             <div class="video-slide">
-                <div class="thumb">
-                    <iframe src="http://player.youku.com/embed/XMTU4ODg0NDY0NA==" frameborder=0 allowfullscreen></iframe>
-                    <div class="desc">
-                        中国园区产业大会2016 回顾
-                    </div>
-                    <div class="desc-bg"></div>
+                <div class="thumb video">
+                    <iframe src="http://player.youku.com/embed/XNTEyMDQxNjY4" frameborder=0 allowfullscreen></iframe>
                 </div>
 
                 <div class="thumb">
