--- a/src/html/about/event.html
+++ b/src/html/about/event.html
@@ -1,5 +1,5 @@
 <!--include('./header.html')-->
-<body class="page-aboutus">
+<body class="page-aboutus" idx="about">
 <!--include('./navigator.html')-->
 <div class="container site-content aboutus">
     <div class="col-md-3" role="navigation">
