--- a/src/html/business/medical.html
+++ b/src/html/business/medical.html
@@ -1,5 +1,5 @@
 <!--include('./header.html')-->
-<body class="page-business">
+<body class="page-business" idx="business">
 <!--include('./navigator.html')-->
 <div class="container site-content business">
     <div class="col-md-2" role="navigation">
