--- a/src/html/business/navigator.html
+++ b/src/html/business/navigator.html
@@ -4,26 +4,18 @@
         <div class="container">
             <nav class="navbar" role="navigation">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="./">
+                    <a class="navbar-brand" href="../">
                         <img src="../../img/logo.png" alt="">
                     </a>
                 </div>
                 <div id="main-navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <!--<li><a href="./index.html">关于CDMC</a></li>-->
-                        <!--<li><a href="./team.html">集团业务</a></li>-->
-                        <!--<li><a href="./news.html">新闻快讯</a></li>-->
-                        <!--<li><a href="./contact.html">行业峰会</a></li>-->
-                        <!--<li><a href="./hire.html">招聘培训</a></li>-->
-                        <!--<li><a href="./hire.html">联系我们</a></li>-->
-
                         <li><a href="../about/aboutus.html">关于CDMC</a></li>
-                        <li><a href="./business.html">集团业务</a></li>
+                        <li><a href="./business.html" idx="business">集团业务</a></li>
                         <li><a href="../news/company.html">新闻快讯</a></li>
                         <li><a href="../contact.html">行业峰会</a></li>
                         <li><a href="../hire.html">招聘培训</a></li>
                         <li><a href="../hire.html">联系我们</a></li>
-
                     </ul>
                     <p class="lang">
                         <a href="./hire.html">ENGLISH</a>
