--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,16 +5,30 @@
     <!-- banner -->
     <div id="banner">
         <div class="slide">
-            <img src="../img/banner.jpg">
-            <img src="../img/banner.jpg">
-            <img src="../img/banner.jpg">
-            <img src="../img/banner.jpg">
-        </div>
-
-        <div class="heading">
-            <p class="name">CDMC Events</p>
-            <p class="title-en">Asian Conference Leader</p>
-            <p class="title-cn">亚洲国际第一品牌</p>
+            <div class="banner-item">
+                <img src="../img/banner.jpg">
+                <div class="heading">
+                    <p class="name">CDMC Events</p>
+                    <p class="title-en">Asian Conference Leader</p>
+                    <p class="title-cn">亚洲国际第一品牌</p>
+                </div>
+            </div>
+            <div class="banner-item">
+                <a href="http://www.oc-annual.com" target="_blank">
+                    <img src="http://elbucket.qiniudn.com/o_1aemog00p17gl1lp2bk78pi1m28k.jpg">
+                </a>
+            </div>
+            <div class="banner-item">
+                <a href="http://www.essc.org.cn" target="_blank">
+                    <img src="http://elbucket.qiniudn.com/o_1adih4pc1ag21hur50m1n3fnd61i.jpg">
+                </a>
+            </div>
+            <div class="banner-item">
+                <a href="http://www.tpasa.org.cn" target="_blank">
+                    <img src="http://elbucket.qiniudn.com/o_1aaiggfs0ri2116f3tloig8lii.jpg">
+                </a>
+            </div>
+            
         </div>
 
         <div class="bottom-block">
@@ -35,6 +49,10 @@
             <div class="video-slide">
                 <div class="thumb video">
                     <iframe src="http://player.youku.com/embed/XNTEyMDQxNjY4" frameborder=0 allowfullscreen></iframe>
+                    <div class="desc">
+                        中国园区产业大会2016 回顾
+                    </div>
+                    <div class="desc-bg"></div>
                 </div>
 
                 <div class="thumb">
