add new content and update styles

--- a/src/html/about/honor.html
+++ b/src/html/about/honor.html
@@ -4,7 +4,7 @@
 <div class="container site-content aboutus">
     <div class="col-md-3" role="navigation">
         <nav class="bs-docs-sidebar">
-            <ul class="nav bs-docs-sidenav">
+            <ul class="nav bs-docs-sidenav ul-block">
                 <li><a href="./aboutus.html">
                     <span class="glyphicon glyphicon-record" aria-hidden="true"></span> 关于公司</a>
                     <ul class="sub-ul">
@@ -14,7 +14,7 @@
                         <li><a href="./consulting.html">顾问</a></li>
                     </ul>
                 </li>
-                <li><a href="./honor.html"><span class="glyphicon glyphicon-record" aria-hidden="true"></span> 荣誉资质</a></li>
+                <li class="active"><a href="./honor.html"><span class="glyphicon glyphicon-record" aria-hidden="true"></span> 荣誉资质</a></li>
                 <li><a href="./client.html"><span class="glyphicon glyphicon-record" aria-hidden="true"></span> 我们的客户</a></li>
                 <li><a href="./partner.html"><span class="glyphicon glyphicon-record" aria-hidden="true"></span> 合作伙伴</a></li>
             </ul>
