--- a/src/html/business/business.html
+++ b/src/html/business/business.html
@@ -15,7 +15,7 @@
     </div>
 
     <div id="content" class="col-md-10">
-        <img src="../../img/about.png">
+        <img class="img" src="../../img/about.png">
         <div>
             <hr align="left"/>
             <h2>麦峰医学科技</h2>
