--- a/src/html/hire.html
+++ b/src/html/hire.html
@@ -2,111 +2,16 @@
 <body class="page-hire" idx="hire">
 <!--include('./common/navigator.html')-->
 <div class="container site-content hire">
-    <div style="width:80%;">
-        <h2>效力于CDMC</h2>
-        <img src="http://www.cdmc.org.cn/images/57376.jpg" width="202" height="120" align="right">您在追求什么样的职业生涯？您希望有一个富有挑战又有高额回报的工作环境吗？您在寻觅一个尊重您的个性、为您施展才华搭建舞台的公司吗？您希望您未来服务的公司应该是唯才而论而不是论资排辈吗？   如果是的话，加入本公司开始您的精彩而成功的事业吧。
-        <br>
-        我们认识到员工是我们最珍贵的财产。我们珍惜拥有的每一个人才，并热切地寻找到尽可能多的人才。如果您敢于梦想、付之行动并愿意挑战高薪，如果我们正是您所寻觅，我们渴望收到您的来信。<br>
-        请将您的简历发送：<a href="mailto:HR@cdmc.org.cn"><strong>HR@cdmc.org.cn</strong></a> 并标明您感兴趣的职位。<br>
-       	<h2>员工福利</h2>
-        <p><strong>我们的目标</strong>是吸引行业中最好的人才，为此我们承诺对他们的贡献给予良好的回报。<br>
-        <br>
-        我们为所有合格员工提供富有竞争力的薪资福利体系，其结构包括基本工资加佣金。另外，公司精英和管理团队将获得绩效奖金和公司股票分红。我们也提供给每个员工一份综合福利，即四金（退休金、医疗保险、失业保险和住房公积金）和商业保险。<br>
-        <br>
-        我们清楚地意识到员工保持身体和心理健康、取得工作和生活良好平衡的重要性。因此，我们将极尽全力帮助您找到解决办法，包括健身活动、户外团队建设和休假权。 </p>
-    </div>
-    <div style="width:80%;">
-    	<strong class="as">国际峰会策划师 </strong>
-    	<span class="as"><a name="a1" id="a1"></a></span><br>
-		国际峰会策划师，是以结果为导向、致力于追求成功、能够与引领行业发展的商务精英保持良好联系的专业人员。他们具备组织调研、活动策划、人员配置技能以及良好的管理技巧。具备这些能力的专业人员能够获得极大的工作成就感以及极具竞争力的薪资报酬。 <br>
-		<strong>岗位职责：</strong><strong> </strong><br>
-		1.本科学历（能源、经济、金融类相关学士学位及以上，2年以上工作经验。海外金融、经济硕士优先） <br>
-		2.精通英语和中文的口语表达和商务书写。CET-6必须通过。 <br>
-		3.强大的调研和分析能力。 <br>
-		4.有电话推销经验。 <br>
-		5.具备抗压能力，能满足紧迫的期限。 <br>
-		6.注重细节，必须具备有统筹兼顾的能力。 <br>
-		<strong>任职要求：</strong> <br>
-		1.能够与行业专家以及公司总监交流沟通，收集和分析信息。 <br>
-		2.能够负责会议内容的调查研究 <br>
-		3.监督会议宣传册的设计制作以及处理所有的市场推广文件。 <br>
-		4.与市场部合作，执行市场活动。 <br>
-		5.每场会议确定并邀请到20位主讲人 <br>
-		6.负责会议发布会现场的运行，确保每位与会者感受到会议的质量与价值。 <br>
-		<br>
-		<strong class="as">销售经理 </strong><span class="as"><a name="a2" id="a2"></a></span><br>
-		<strong>岗位职责：</strong><strong> </strong><br>
-		1.在会议现场或者会议准备期间督促销售专员的各项工作 <br>
-		2.与会议研发部门、市场部以及其他支持部门保持密切沟通 <br>
-		3.通过电话销售US$ 5K-35K的赞助商或者参会/展合同 <br>
-		4.通过内外部媒体刊物、网站和具有竞争力的展览/会议确定潜在的客户资源 <br>
-		5.管理世界各地的新老客户资源 <br>
-		6.完成和超过每月制定的项目回款目标 <br>
-		7.需要参加国内外的各种展览和峰会 <br>
-		8.举行每周的销售例会，回顾上一周期的销售完成情况以及下一周期的销售目标 <br>
-		9.培训和指导销售专员完成销售业绩 <br>
-		10.根据公司条款与赞助商洽谈并起草销售合同 <br>
-		<strong>任职要求：</strong> <br>
-		1.出色的英语口语能力 <br>
-		2.2~3年针对企业高层的销售经验 <br>
-		3.拥有咨询行业或者电话销售行业工作经验者优先 <br>
-		4.能够高效完成销售的周期，包括开发新的商业渠道、合同谈判和完成交易 <br>
-		5.极高的工作热情和主观能动性，拥有出色的商业信函技巧和沟通能力，能够在竞争激烈的环境中工作 <br>
-		6.大学本科学历 <br>
-		<br>
-		<strong class="as">海外销售执行 </strong><span class="as"><a name="a3" id="a3"></a></span><br>
-		海外销售执行主要的工作职责是将我们的峰会和会议项目销售给公司的决策层。调研确定，销售谈判一些能够参会或者提供服务的潜在客户。 为潜在客户匹配需要和需求，提供公司的产品。其作用是积极争取有关业内人士认同，以免他们错过我们的会展服务。 <br>
-		<strong>岗位职责：</strong><strong> </strong><br>
-		1.熟悉所要销售的会议项目 <br>
-		2.完成目标公司的搜索确保高效地了解项目信息 <br>
-		3.在给定的行业调研列表中联系合适的参会代表 <br>
-		4.为潜在客户提供有效和具有诱惑力的信息 <br>
-		5.注册参会代表和赞助商 <br>
-		<strong>任职要求：</strong> <br>
-		1.本科学历或以上 <br>
-		2.了解电话销售 <br>
-		3.出色的英语写作和口语技巧 <br>
-		4.对于竞争拥有积极地心态 <br>
-		5.自信，并且具有主观能动性 <br>
-		6.极高的工作热情 <br>
-		7.拥有团队合作精神 <br>
-		<br>
-		<strong class="as">国内销售代表 </strong><span class="as"><a name="a4" id="a4"></a></span><br>
-		<strong>岗位职责：</strong><strong> </strong><br>
-		1.与世界500强企业以及能源，基础建设，轨道交通，金融，奢侈品等行业的决策者（包括总裁，总经理，副总裁，总监等）进行沟通，向其介绍亚太区的高层峰会，论坛，学术交流等活动 <br>
-		2.能独立完成销售经理所负责的全流程工作，包括前期市场调研，电话沟通，客户落实，会议现场客户接待 <br>
-		3.对目前中国最蓬勃发展的产业（如能源、资源、交通、城市基础设施建设、金融、奢侈品等）进行深入了解，拓宽加深对中国宏观经济的认识 以上人员一经录用，公司将提供具有竞争力的薪资福利和开阔的事业平台。 <br>
-		<strong>任职要求：</strong> <br>
-		1.大专以上学历 <br>
-		2.具有出色的客户沟通及交流技巧 <br>
-		3.较好的中、英文文字水平及语言表达能力 <br>
-		4.具备基本经济学、管理学知识，工作积极主动，具有快速学习能力，并愿经受高强度工作 <br>
-		5.一年以上会展、广告行业销售经验优先<br>
-		<br>
-		<span class="as">会务专员</span><span class="as"><a name="a5" id="a5"></a></span><br>
-		<strong>岗位职责：</strong><strong> </strong><br>
-		1.基础性文本工作 <br>
-		2.会前内部支持性工作（支持销售团队和会议策划团队） <br>
-		3.大型国际会议统筹管理和执行 <br>
-		4.依照所定的质量和成本要求，选用和管理会议需用供应商 <br>
-		5.预算与成本控制 <br>
-		6.参会人员日程及接待安排 <br>
-		7.会场控制与管理 <br>
-		8.会后核算，评估及感谢 <br>
-		<strong>任职要求：</strong> <br>
-		1.大学本科学历 <br>
-		2.英语六级 <br>
-		3.熟练使用各种办公软件及互联网 <br>
-		4.商务英语听说读写能力优秀 <br>
-		5.有国际性会议计划、组织和执行经验者优先 <br>
-		6.能够独立完成工作任务及解决问题 <br>
-		7.出色的团队合作者，既能配合团队其他成员工作；也能作为团队负责人，分配会场任务 <br>
-		8.优秀的沟通能力，开通 <br>
-		9.自信，灵活，细心，诚实，具有高度责任心 
-
-		将您的CV发送到： <a href="mailto:HR@cdmc.org.cn"><strong>HR@cdmc.org.cn</strong></a><br>
-		我们将为合格候选者提供有竞争力的薪水和福利。<br>
-		网址： <a href="http://www.cdmc.org.cn">www.cdmc.org.cn</a> 
+	<div style="width:80%; padding-bottom: 200px">
+		<h2>用人理念</h2>
+		<!--<img src="http://www.cdmc.org.cn/images/57376.jpg" width="202" height="120" align="right">-->
+		<strong>人是CDMC最重要的资产</strong>
+		<br/> <br/>
+		在CDMC，找到适合的人才，是我们非常重视的工作。那些热情、能够自我激励，将工作潜能发挥到最大的人，是我们一直在青睐的类型。无论你现在拥有什么样的能力，我们都将提供完善的培训、具有吸引力的职业发展机会。在CDMC工作非常具有挑战性，但CDMC的文化是高产出、高回报。
+		<br/> <br/>
+		如果你对CDMC工作机会感兴趣，请将简历发送至：<a href="mailto:HR@cdmc.org.cn"><strong>HR@cdmc.org.cn</strong></a> 并标明您感兴趣的职位。
+		<br/> <br/>
+		如果你做个朝九晚五的上班族，CDMC不适合你。我们期望你专心致志、长期在一个岗位耕耘。而CDMC会回报你非常具有竞争力的薪资方案和体验世界的机会！
 	</div>
 	<hr>
 </div>
