fix the active style for selected li

--- a/src/html/about/event.html
+++ b/src/html/about/event.html
@@ -7,7 +7,7 @@
             <ul class="nav bs-docs-sidenav ul-block">
                 <li><a href="./aboutus.html">
                     <span class="glyphicon glyphicon-record" aria-hidden="true"></span> 关于公司</a>
-                    <ul class="sub-ul">
+                    <ul class="sub-ul ul-block">
                         <li><a href="./vision.html">战略愿景</a></li>
                         <li class="active"><a href="./event.html">集团大事记</a></li>
                         <li><a href="./ourteam.html">团队</a></li>
